# iris-web-backend

./: .coverage  .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  Procfile  README.md  celery_worker.py  config.py  dev.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run.py  start.sh  vis.py
app/: __init__.py  cache.py  routes.py  services.py  tasks.py
app/api/: middleware.py  routes.py  schemas.py  swagger.py
app/core/: factory.py  interfaces.py  models.py  pathfinding.py  services.py
app/infrastructure/: cache.py  redis_queue.py  tasks.py
app/utils/: constants.py  exceptions.py  logging.py
config/: base.py  development.py  production.py  testing.py
docs/: architecture_guide.tex
static/: index.html  robots.txt  script.js  styles.css
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_pathfinding.py  test_services.py
tests/unit/: test_cache_impl.py  test_exceptions.py  test_external_wikipedia_client.py  test_factory_and_tasks_config.py  test_middleware_and_logging.py  test_models.py  test_redis_queue_impl.py  test_tasks.py
wikipedia/: links.db  main.py
wikipedia/wikipedia/: items.py  pipelines.py  settings.py
wikipedia/wikipedia/spiders/: index_scraper.py  spider.py
