[project]
name = "iris-web-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "flasgger>=0.9.7.1",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "marshmallow>=3.22.0",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
    "basedpyright>=1.23.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B904",   # raise-without-from-inside-except (existing style)
    "E501",   # line too long — formatter handles length, not string literals
    "SIM117", # nested with statements (readability preference)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingImports = true
reportUnusedImport = true
reportUnusedVariable = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
